2007-12-28  Christian Persch  <chpe@gnome.org>

	* gtk/gtkfontsel.c: (gtk_font_selection_get_property): Plug
	a mem leak. Bug #506096.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkprintoperation.c:
	* gtk/gtkprogressbar.c:
	* gtk/gtkmessagedialog.c:
	* gtk/gtknotebook.c:
	* gtk/gtkprinter.c:
	* gtk/gtkfilesel.c:
	* gtk/gtklabel.c:
	* gtk/gtklinkbutton.c:
	* gtk/gtkmenu.c: More default property value corrections.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkitemfactory.c (gtk_item_factory_finalize): Don't unref
	accel_group unless it is set.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkwindow-x11.c (get_default_title): Don't return NULL.

2007-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkhandlebox.c: Fix the default values of shadow and 
	shadow-type properties.

	* gtk/gtkfontsel.c: Fix the default values of several properties.

	* gtk/gtkfilesel.c: Fix the default value of the show-fileops
	property.

	* gtk/gtkcurve.c: Fix the default value of the curve-type property.

	* gtk/gtkcombo.c: Fix the default value of the enable-arrows-always
	property.

2007-12-28  Johan Dahlin  <johan@gnome.org>

	* gtk/gtkdialog.c (gtk_dialog_buildable_custom_finished)
	(gtk_dialog_buildable_custom_tag_start): Chain up. 
	This makes it possible to have accelerators tags on GtkDialog 
	subclasses.

2007-12-28  Mathias Hasselmann  <mathias@openismus.com>

	Add GTK_CALENDAR_SHOW_DETAILS display flag, which chooses if details
	are shown within the widget, or jst as tooltip.

	* gtk/gtkcalendar.c, gtk/gtkcalendar.h: Add "show-details" property
	aka. GTK_CALENDAR_SHOW_DETAILS, and use it.
	* tests/testcalendar.c: Test GTK_CALENDAR_SHOW_DETAILS. Reduce padding
	in flags vbox.

2007-12-28  Mathias Hasselmann  <mathias@openismus.com>

	Try more decent appearance of calendar details separator. (#339540)

	* gtk/gtkcalendar.c: Use different colors for drawing the separator,
	and make it short by one pixel on each side.
