@@ -128,18 +128,18 @@ gtk_table_class_init (GtkTableClass *class)
                                    g_param_spec_uint ("n-rows",
 						     P_("Rows"),
 						     P_("The number of rows in the table"),
-						     0,
+						     1,
 						     G_MAXUINT,
-						     0,
+						     1,
 						     GTK_PARAM_READWRITE));
   g_object_class_install_property (gobject_class,
                                    PROP_N_COLUMNS,
                                    g_param_spec_uint ("n-columns",
 						     P_("Columns"),
 						     P_("The number of columns in the table"),
-						     0,
+						     1,
 						     G_MAXUINT,
-						     0,
+						     1,
 						     GTK_PARAM_READWRITE));
   g_object_class_install_property (gobject_class,
                                    PROP_ROW_SPACING,
